# FreeRTOS_Audio_Driver_with_Interrupts_ESP32

idf-wav-sdcard/: README.md  platformio.ini  sdkconfig  sdkconfig.old
idf-wav-sdcard/lib/audio_output/src/: Output.cpp  Output.h
idf-wav-sdcard/lib/wav_file/src/: WAVFileReader.h
idf-wav-sdcard/src/: CMakeLists.txt  config.h  main.cpp
lib/audio_output/src/: I2SOutput.cpp
lib/manage_sd/src/: manage_sd.cpp  manage_sd.h
lib/spiffs/src/: SPIFFS.h
lib/wav_file/src/: WAVFile.h
src/: main.cpp
